--- a/www/home/home.html
+++ b/www/home/home.html
@@ -1,20 +1,5 @@
-<md-content>
-    <md-toolbar class="md-hue-2">
-        <div class="md-toolbar-tools">
-            <md-button class="md-icon-button" aria-label="Settings">
-                <i class="fa fa-bars"></i>
-            </md-button>
-            <span>{{ vm.title }}</span>
-            <span flex></span>
-        </div>
-    </md-toolbar>
-
-
-    <ion-scroll>
-        <img ng-src="{{ vm.image }}" height="200px" />
-    </ion-scroll>
-
-
-    <md-button class="md-fab fa fa-camera" ng-click="vm.takeAShot()" aria-label="camera">
-    </md-button>
-</md-content>
+<div id="fab-menu">
+    <md-button class="md-fab fa fa-camera" ng-click="vm.getPicture('CAMERA')" aria-label="camera"></md-button>
+    <md-button class="md-fab fa fa-picture-o" ng-click="vm.getPicture('PHOTOLIBRARY')" aria-label="galery"></md-button>
+</div>
+<img ng-src="{{ vm.image }}" width="100%" height="100%" />
